Pictures do not show in the Browser when visited through Github Trying to change src from /assets to ../assets as a test run

--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Ramen</h1>
-        <img src="/assets/tantan.jpg" alt="tantanramen">
+        <img src="../assets/tantan.jpg" alt="tantanramen">
     <h3>Homemade Vegan Tantan Ramen - Inspired by T's Tantan</h3>
      <p>This nourishing Bowl is inspired by the well known T's Tantan Ramen from Japan</p>
      <p>It is absolutely beginner-friendly which makes it the perfect Dinner after Work!</p>
