Fixing the Picture Issue Was my Fault due to wrong directory path Instead of /assets... i used ../assets

--- a/recipes/carrotcake.html
+++ b/recipes/carrotcake.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Carrot Cake</h1>
-        <img src="/assets/vegancarrotcake.jpg" alt="carrotcake">
+        <img src="../assets/vegancarrotcake.jpg" alt="carrotcake">
     <h3>Delicious, soft and fluffy vegan Carrot Cake</h3>
     <p>The classic Carrot Cake that leaves everyone wondering "Is this really vegan"</p>
     <p>A mouthwatering, fluffy and delicious Carrot Cake that is perfect to impress your loved ones!</p>
