--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-        <img src="/assets/veganlasagna.jpeg" alt="lasagna">
+        <img src="../assets/veganlasagna.jpeg" alt="lasagna">
     <h3>Healthy vegan and delicious Lasagna</h3>
     <p>A Lasagna without meat? Yes! And this Recipe is also from an Italian Nonna!</p>
     <p>Without a dout, this Lasagna will be your new favorite Dish</p>
