new files: img for lasagna page css for each page
css:
center aligned the pictures
added top and bottom margin to the pictures
border radius on the pictures
added color to background; headers and paragraphs
created a clickable home button which redirects to the index.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../lasagna.css">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
-        <img src="../assets/veganlasagna.jpeg" alt="lasagna">
+    <h1 class="Font">Vegan Italian Lasagna</h1>
+        <img class="picture1" src="../assets/lasagna_1.png" alt="lasagna">
     <h3>Healthy vegan and delicious Lasagna</h3>
-    <p>A Lasagna without meat? Yes! And this Recipe is also from an Italian Nonna!</p>
-    <p>Without a dout, this Lasagna will be your new favorite Dish</p>
+    <p class="Description">A Lasagna without meat? Yes! And this Recipe is also from an Italian Nonna!</p>
+    <p class="Description">Without a doubt, this Lasagna will be your new favorite Dish</p>
 
     <h4>Ingredients</h4>
-    <p>Bolognese Sauce</p>
+    <p class="title">Bolognese Sauce</p>
         <ul>
             <li>2-3 tbsp olive oil</li>
             <li>1 lbs (500 g) vegan ground beef</li>
@@ -28,11 +29,11 @@
             <li>1 tbsp Italian herbs mixture of oregano, basil, thyme</li>
             <li>salt and pepper to taste</li>
         </ul>
-    <p>Further Ingredients</p>
+    <p class="title">Further Ingredients</p>
         <ul>
             <li>9-12 lasagna sheets no-boil or oven-ready</li>
         </ul>
-    <p>Bechamel Sauce</p>
+    <p class="title">Bechamel Sauce</p>
         <ul>
             <li>2 tbsp (30 g) vegan butter</li>
             <li>2 tbsp (30 g) flour</li>
@@ -41,22 +42,26 @@
             <li>1 pinch of nutmeg optional</li>
             <li>2 tbsp nutritional yeast or vegan parmesan, optional</li>
         </ul>
-    <p>Toppings (Optional)</p>
+    <p class="title">Toppings (Optional)</p>
         <ul>
             <li>vegan cheese</li>
             <li>vegan parmesan</li>
             <li>fresh basil</li>
         </ul>
     <h4>Steps</h4> 
+    <img src="../assets/lasagna_2.png" alt="Step1">
         <ol>
             <li>Heat 1-2 tablespoons of oil in a non-stick pan and fry the vegan ground beef according to package directions until crumbly. Then set aside.</li>
             <li>Heat the remaining oil in a large deep pan or pot. Add the onions, carrots and celery and sauté for 2-3 minutes until the onions are translucent. Then add the garlic and sauté for 30 seconds. Next, add tomato paste and Italian herbs and sauté for a few seconds.</li>
             <li>Now stir in the vegan ground beef. Then deglaze with red wine and let it boil down briefly. Now stir in chopped tomatoes and tomato passata, season with a little salt and pepper and simmer the Bolognese sauce for about 15 minutes with a lid on it until it has thickened well. Taste and adjust seasonings as needed and allow to cool slightly.</li>
             <li>Melt the vegan butter in a saucepan over medium heat. Then whisk in the flour and sweat for 1 minute, stirring constantly. Now slowly add the soy milk and bring to a boil, continuing to stir until the sauce thickens. Season to taste with salt, pepper, nutmeg and nutritional yeast flakes. Then remove from heat and set aside.</li>
             <li>Preheat the oven to 392 °F (200 °C). Brush a baking dish with a little oil.</li>
+    <img src="../assets/lasagna_3.png" alt="Step2">
+    <img src="../assets/lasagna_4.png" alt="Step3">
             <li>First spread a thin layer of Bolognese sauce on the bottom of the baking dish. Then alternate layers of lasagna sheets, bolognese and béchamel on top. Finish with a thick layer of béchamel sauce. Finally, sprinkle with some vegan grated cheese and /or vegan Parmesan and bake the lasagna for about 45 minutes in the preheated oven (if the top browns too quickly, you can cover it with parchment paper or aluminum foil).</li>
+    <img src="../assets/lasagna_5.png" alt="Step4">
             <li>Let the lasagna cool down a bit while it becomes more sliceable. Then garnish with fresh basil and enjoy!</li>
         </ol>
-    <a href="../index.html">Home</a>
-</body>
+<a class="homebutton" href="../index.html" target="_blank">Home</a>
+    </body>
 </html>
