add: - various images for the recipe and the home page
edited:
- html and css files based on the first page i edited previously
- edited the home page that you can click a picture instead of a text link
- set the same style for each page
- changed some pictures
- changed height of the portrait format images so they don't take up as much space

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -49,19 +49,19 @@
             <li>fresh basil</li>
         </ul>
     <h4>Steps</h4> 
-    <img src="../assets/lasagna_2.png" alt="Step1">
+    <img class="hoch" src="../assets/lasagna_2.png" alt="Step1">
         <ol>
             <li>Heat 1-2 tablespoons of oil in a non-stick pan and fry the vegan ground beef according to package directions until crumbly. Then set aside.</li>
             <li>Heat the remaining oil in a large deep pan or pot. Add the onions, carrots and celery and sauté for 2-3 minutes until the onions are translucent. Then add the garlic and sauté for 30 seconds. Next, add tomato paste and Italian herbs and sauté for a few seconds.</li>
             <li>Now stir in the vegan ground beef. Then deglaze with red wine and let it boil down briefly. Now stir in chopped tomatoes and tomato passata, season with a little salt and pepper and simmer the Bolognese sauce for about 15 minutes with a lid on it until it has thickened well. Taste and adjust seasonings as needed and allow to cool slightly.</li>
             <li>Melt the vegan butter in a saucepan over medium heat. Then whisk in the flour and sweat for 1 minute, stirring constantly. Now slowly add the soy milk and bring to a boil, continuing to stir until the sauce thickens. Season to taste with salt, pepper, nutmeg and nutritional yeast flakes. Then remove from heat and set aside.</li>
             <li>Preheat the oven to 392 °F (200 °C). Brush a baking dish with a little oil.</li>
-    <img src="../assets/lasagna_3.png" alt="Step2">
-    <img src="../assets/lasagna_4.png" alt="Step3">
+    <img class="hoch" src="../assets/lasagna_3.png" alt="Step2">
+    <img class="hoch" src="../assets/lasagna_4.png" alt="Step3">
             <li>First spread a thin layer of Bolognese sauce on the bottom of the baking dish. Then alternate layers of lasagna sheets, bolognese and béchamel on top. Finish with a thick layer of béchamel sauce. Finally, sprinkle with some vegan grated cheese and /or vegan Parmesan and bake the lasagna for about 45 minutes in the preheated oven (if the top browns too quickly, you can cover it with parchment paper or aluminum foil).</li>
     <img src="../assets/lasagna_5.png" alt="Step4">
             <li>Let the lasagna cool down a bit while it becomes more sliceable. Then garnish with fresh basil and enjoy!</li>
         </ol>
-<a class="homebutton" href="../index.html" target="_blank">Home</a>
+<a class="button" href="../index.html" target="_self">Home</a>
     </body>
 </html>
