--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../ramen.css">
     <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Ramen</h1>
-        <img src="../assets/tantan.jpg" alt="tantanramen">
+        <img class="querformat"src="../assets/ramen_1.png" alt="tantanramen">
     <h3>Homemade Vegan Tantan Ramen - Inspired by T's Tantan</h3>
-     <p>This nourishing Bowl is inspired by the well known T's Tantan Ramen from Japan</p>
-     <p>It is absolutely beginner-friendly which makes it the perfect Dinner after Work!</p>
+     <p class="Description">This nourishing Bowl is inspired by the well known T's Tantan Ramen from Japan</p>
+     <p class="Description">It is absolutely beginner-friendly which makes it the perfect Dinner after Work!</p>
     <h4>Ingredients</h4>  
-    <p>Soup Base</p>
+    <p class="title">Soup Base</p>
         <ul>
             <li>3 tbsp asian sesame paste</li>
             <li>2 tbsp soy sauce</li>
@@ -22,7 +23,7 @@
             <li>1 cup soy milk (250ml)</li>
             <li>1.5 cup kombu dashi broth or vegetable (300ml)</li>
         </ul>
-    <p>Spicy Fried Tofu Crumbles</p>
+    <p class="title">Spicy Fried Tofu Crumbles</p>
         <ul>
             <li>100 g soy meat or tofu</li>
             <li>1 tsp garlic, minced</li>
@@ -32,7 +33,7 @@
             <li>1/2 tbsp miso paste</li>
             <li>1 tsp red chili oil</li>
         </ul>
-    <p>Other Ingredients</p>
+    <p class="title">Other Ingredients</p>
         <ul>
             <li>2 portions of ramen noodles</li>
             <li>1/2 head of small cabbage, shredded</li>
@@ -40,6 +41,7 @@
             <li>1/2 cup corn</li>
             <li>Additional garnishes: crushed peanuts, sesame seeds, sliced green onions, sliced garlic tops, soy sauce and rayu/red chili oil.</li>
         </ul>
+        <img class="hochformat" src="../assets/ramen_6.png" alt="tantanramen">
     <h4>Steps</h4> 
         <ol>
             <li>If using soy meat, soak in hot water for 5 minutes. If using tofu, crumble tofu until they resemble minced meat.</li>
@@ -50,7 +52,6 @@
             <li>Heat the soy milk and vegetable stock over medium low heat, then reduce to low as soon as you start to see bubbles. Whisk in the paste made earlier until dissolved.</li>
             <li> Place cooked noodles into a bowl. Pour over half the broth. Add on the fried minced soy meat, vegetables, additional garnishes and chili oil.</li>
         </ol>
-    
-    <a href="../index.html">Home</a>
+        <a class="button" href="../index.html" target="_self">Home</a>
 </body>
 </html>
