--- a/index.html
+++ b/index.html
@@ -3,14 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="home.css">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-       <li><a href="recipes/ramen.html">Ramen</a></li>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/carrotcake.html">Carrot Cake</a></li>
-    </ul>
+    <h1>My Favorite Cozy Recipes</h1>
+    <h3>Healthy Comfort Meals</h3>
+    <p class="Description">Who doesn't love a comforting meal when planning a cozy dinner at home?</p>
+    <p class="Description">These three are my favorite meals, click on the image below!</p>
+
+    <div class="row">
+        <div class="column">
+            <a href="recipes/ramen.html"><img src="./assets/ramen_8.jpg" alt="Ramen" style="width:100%"></a>
+        </div>
+        <div class="column">
+            <a href="recipes/lasagna.html"><img src="./assets/lasagna_6.jpg" alt="Lasagna" style="width:100%"></a>
+        </div>
+        <div class="column">
+            <a href="recipes/carrotcake.html"><img src="./assets/cake_8.jpg" alt="Cake" style="width:100%"></a>
+        </div>
+      </div>
+
 </body>
 </html>
