--- a/recipes/carrotcake.html
+++ b/recipes/carrotcake.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../cake.css">
     <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Carrot Cake</h1>
-        <img src="../assets/vegancarrotcake.jpg" alt="carrotcake">
+        <img src="../assets/cake_1.jpg" alt="carrotcake">
     <h3>Delicious, soft and fluffy vegan Carrot Cake</h3>
-    <p>The classic Carrot Cake that leaves everyone wondering "Is this really vegan"</p>
-    <p>A mouthwatering, fluffy and delicious Carrot Cake that is perfect to impress your loved ones!</p>
+    <p class="Description">The classic Carrot Cake that leaves everyone wondering "Is this really vegan"</p>
+    <p class="Description">A mouthwatering, fluffy and delicious Carrot Cake that is perfect to impress your loved ones!</p>
    
     <h4>Ingredients</h4>
-    <p>For the Carrot Cake</p>
+    <p class="title">For the Carrot Cake</p>
     <ul>
         <li>2 cups All Purpose Flour (250g)</li>
         <li>1 tsp Baking Powder</li>
@@ -29,7 +30,7 @@
         <li>1 Tbsp Apple Cider Vinegar</li>
         <li>1 cup Walnuts (100g) Chopped, Optional</li>
     </ul>
-    <p>For the Lemon Buttercream Frosting</p>
+    <p class="title">For the Lemon Buttercream Frosting</p>
     <ul>
         <li>4 cups Powdered Sugar (480g)</li>
         <li>½ cup Vegan Butter (112g)</li>
@@ -37,27 +38,32 @@
         <li>1 tsp Apple Cider Vinegar</li>
         <li>2-3 Tbsp Fresh Lemon Juice</li>
     </ul>
-    <p>Decorations</p>
+    <p class="title">Decorations</p>
     <ul>
         <li>Walnuts Chopped</li>
     </ul>
     <h4>Steps</h4> 
     <ol>
         <li>Preheat the oven to 350°F (180°C). Spray two 7-inch cake pans or two 8-inch cake pans (see notes*) with non-stick spray and line the bottoms with circles of parchment paper.</li>
+    <img src="../assets/cake_2.png" alt="carrotcake">
         <li>Sift the all purpose flour into a mixing bowl and add the baking powder, baking soda, salt, cinnamon and nutmeg. Mix together.</li>
+    <img src="../assets/cake_3.png" alt="carrotcake">
         <li>Add the light brown sugar and grated carrot to the mixing bowl.</li>
         <li>Prepare your flax eggs by adding 2 tablespoons of ground flaxseed meal to a bowl with 6 tablespoons of hot water. Let it sit for a minute to become gloopy.</li>
         <li>Add the flax eggs, oil, vanilla extract, apple cider vinegar and chopped walnuts to the mixing bowl.</li>
         <li>Mix everything together. If it seems like it won't come together and the mix is too dry then step away from the bowl for a couple of minutes and then come back to it. The carrots will have released more moisture into the batter allowing it to come together into a thick batter.</li>
+    <img src="../assets/cake_6.png" alt="carrotcake">
         <li>Divide the batter evenly between the two prepared cake pans.</li>
         <li>Bake for 30 minutes or until a toothpick inserted into the center of one of the cakes comes out clean.</li>
         <li>Allow the cakes to cool in the pans for a few minutes before transferring them to a wire cooling rack to cool completely.</li>
         <li>While the cakes are cooling, prepare your frosting.</li>
         <li>Add the powdered sugar, vegan butter, vanilla extract, apple cider vinegar and 2 tablespoons of lemon juice to the bowl of your stand mixer.</li>
         <li>Start mixing on low speed gradually increasing speed until your frosting is thick and smooth.</li>
+    <img src="../assets/cake_5.png" alt="carrotcake">
         <li>If your frosting is too thick then add in the extra tablespoon of lemon juice, a drop at a time and only as much as needed to get to a spreadable consistency.</li>
+    <img src="../assets/cake_7.png" alt="carrotcake">
         <li>Frost the cake and decorate the top with chopped walnuts.</li>
     </ol>
-    <a href="../index.html">Home</a>
+    <a class="button" href="../index.html" target="_self">Home</a>
 </body>
 </html>
