wrapped the button in a div and then applied padding to the div now the button is not glued to the bottom of the page

--- a/recipes/carrotcake.html
+++ b/recipes/carrotcake.html
@@ -64,6 +64,8 @@
     <img src="../assets/cake_7.png" alt="carrotcake">
         <li>Frost the cake and decorate the top with chopped walnuts.</li>
     </ol>
+    <div class="wrap">
     <a class="button" href="../index.html" target="_self">Home</a>
+    </div>
 </body>
 </html>
