--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -52,6 +52,8 @@
             <li>Heat the soy milk and vegetable stock over medium low heat, then reduce to low as soon as you start to see bubbles. Whisk in the paste made earlier until dissolved.</li>
             <li> Place cooked noodles into a bowl. Pour over half the broth. Add on the fried minced soy meat, vegetables, additional garnishes and chili oil.</li>
         </ol>
+    <div class="wrap">
         <a class="button" href="../index.html" target="_self">Home</a>
+    </div>
 </body>
 </html>
