--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -62,6 +62,8 @@
     <img src="../assets/lasagna_5.png" alt="Step4">
             <li>Let the lasagna cool down a bit while it becomes more sliceable. Then garnish with fresh basil and enjoy!</li>
         </ol>
+<div class="wrap">
 <a class="button" href="../index.html" target="_self">Home</a>
-    </body>
+</div>
+</body>
 </html>
